Tec v1.0.30 Actualiza modulo de JRV